# voltex-engine

./: .editorconfig  CMakeLists.txt  xmake.lua
.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
shaders/: colored_triangle.vert  raymarch.comp  raymarch.comp.spv  raymarch.spv  xmake.lua
src/: CMakeLists.txt  main.cpp
src/data structures/svo/: svo.cpp  svo.h
src/engine/: camera.cpp  camera.h
src/renderer/: vk_engine.cpp  vk_engine.h
src/renderer/pipelines/: vk_pipelines.cpp  vk_pipelines.h
src/renderer/swapchain/: Swapchain.cpp  Swapchain.h
src/renderer/utilities/: vk_descriptors.cpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_types.h
